Replace jcifs by jcifs-ng.